[lworld] C2: "assert(safepoints.length() == 0 || !res_type->is_inlinetypeptr()) failed: Inline type allocations should not have safepoint uses" with circular inline types

XMLWordPrintable

      We hit this assert when having circular inline types which cannot completely be scalarized due to their circular references. We stop at depth 1. We therefore still have unscalarized inline types when performing scalar replacement after EA. The assert is too strong as it does not account for this situation. We should relax it.

      Example:

      static void test3() {
          V3 v3 = new V3();
          dontInline();
          iFld = v3.i;
      }

      value class V3 {
          V3 v;
          int i;

          V3() {
              v = new V3(2);
              this.i = 34;
          }

          V3(int i) {
              v = null;
              this.i = i;
          }
      }

            Assignee:
            Christian Hagedorn
            Reporter:
            Christian Hagedorn
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: